Created Student dashboard

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,28 @@
-Please pull the code from GitHub repository
+== README
 
-run bundle install
+This README would normally document whatever steps are necessary to get the
+application up and running.
 
-rake db:create
+Things you may want to cover:
 
-rake db:migrate
+* Ruby version
 
-start server
+* System dependencies
+
+* Configuration
+
+* Database creation
+
+* Database initialization
+
+* How to run the test suite
+
+* Services (job queues, cache servers, search engines, etc.)
+
+* Deployment instructions
+
+* ...
+
+
+Please feel free to use a different markup language if you do not plan to run
+<tt>rake doc:app</tt>.
